# openapi/openapi.json
@@ -986,7 +986,7 @@
                 },
                 "responses": {
                     "201": {
-                        "description": "Success",
+                        "description": "Created",
                         "content": {
                             "application/vnd.api+json": {
                                 "schema": {
@@ -1022,6 +1022,20 @@
                                                                 "FAILED",
                                                                 "CANCELLED"
                                                             ]
+                                                        },
+                                                        "caseReferenceNumber": {
+                                                            "type": "string",
+                                                            "pattern": "^[0-9]{2}\\\\[0-9]{6}$",
+                                                            "nullable": true
+                                                        },
+                                                        "applicantEmail": {
+                                                            "type": "string",
+                                                            "format": "email",
+                                                            "nullable": true
+                                                        },
+                                                        "applicantName": {
+                                                            "type": "string",
+                                                            "nullable": true
                                                         }
                                                     }
                                                 }
@@ -1035,7 +1049,8 @@
                                         "attributes": {
                                             "questionnaireId": "285cb104-0c15-4a9c-9840-cb1007f098fb",
                                             "submitted": true,
-                                            "status": "COMPLETE"
+                                            "status": "IN_PROGRESS",
+                                            "caseReferenceNumber": "11\\111111"
                                         }
                                     }
                                 }
@@ -1282,6 +1297,20 @@
                                                                 "FAILED",
                                                                 "CANCELLED"
                                                             ]
+                                                        },
+                                                        "caseReferenceNumber": {
+                                                            "type": "string",
+                                                            "pattern": "^[0-9]{2}\\\\[0-9]{6}$",
+                                                            "nullable": true
+                                                        },
+                                                        "applicantEmail": {
+                                                            "type": "string",
+                                                            "format": "email",
+                                                            "nullable": true
+                                                        },
+                                                        "applicantName": {
+                                                            "type": "string",
+                                                            "nullable": true
                                                         }
                                                     }
                                                 }
@@ -1295,7 +1324,8 @@
                                         "attributes": {
                                             "questionnaireId": "285cb104-0c15-4a9c-9840-cb1007f098fb",
                                             "submitted": false,
-                                            "status": "IN_PROGRESS"
+                                            "status": "IN_PROGRESS",
+                                            "caseReferenceNumber": "11\\111111"
                                         }
                                     }
                                 }
